[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mix-memory"
version = "0.1.0"
description = "A network of music tracks linked by strong transitions."
authors = [
    { name = "Stephen Howe", email = "stephenhowemusic@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "networkx >= 3.4",
    "pydantic >= 2.10"
]

[project.optional-dependencies]
dev = [
    "black"
]

[tool.setuptools.packages.find]
where = ["."]
